--- a/Css/typography.css
+++ b/Css/typography.css
@@ -141,3 +141,7 @@ sub {
   padding-left: 3.0000rem;
   padding-right: 3.0000rem;
 }
+
+p {
+    margin: 0;
+}
